--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,8 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/green_dark">
-
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,7 +17,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.068" />
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
@@ -29,7 +26,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
@@ -40,7 +36,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView">
-
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="wrap_content"
@@ -56,7 +51,6 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:src="@drawable/ic_doctor" />
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -66,7 +60,6 @@
                 android:text="@string/see_more"
                 android:textColor="@color/black"
                 android:textSize="@dimen/small_text_size" />
-
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/reed_me_button"
                 android:layout_width="wrap_content"
@@ -80,7 +73,6 @@
                 android:textColor="@color/white"
                 android:textSize="12sp" />
         </androidx.cardview.widget.CardView>
-
         <TextView
             android:id="@+id/global_textview"
             android:layout_width="match_parent"
@@ -217,7 +209,7 @@
             android:paddingTop="@dimen/small_padding"
             android:text="@string/last_updated"
             android:textColor="@color/black"
-            android:textSize="12dp"
+            android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="@+id/global_textview"
             app:layout_constraintStart_toStartOf="@+id/global_textview"
             app:layout_constraintTop_toBottomOf="@+id/confirm_card" />
